// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-document should delete a document 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;

exports[`delete-document should handle non-existent document 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The content could not be found","status":404,"operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;
